[package]
name = "computational-fundamentals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verification_suite"
path = "src/main.rs"

[[bin]]
name = "edge_simulation"
path = "src/bin/edge_simulation.rs"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
statrs = "0.16.0"
colored = "2.0.0"
anyhow = "1.0.75"
linked-hash-map = "0.5.6"
pprof = { version = "0.13", features = ["flamegraph"], optional = true }

[features]
profiling = ["pprof"]
